--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "rest-express",
+  "name": "hierarchical-clustering-visualization",
   "version": "1.0.0",
-  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -64,7 +63,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.3",
     "@types/node": "20.16.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -72,8 +70,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "5.6.3"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.8"
   }
 }
