Complete project update: Interactive Hierarchical Clustering Visualization
- Updated README with comprehensive documentation and repository links
- Added LICENSE file (MIT)
- Added GIT_SETUP.md guide
- Removed build artifacts (.next folder)
- Added all new components (VideoModal, VideoPlayer, VideoPreview, RealLifeExamples)
- Added clustering page route
- Updated all repository references to https://github.com/Dharmikgalla/DHV-final
- Added screenshots directory with UI screenshots
- Added documentation files
- Updated package.json with repository information
- Cleaned up unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -75,9 +75,12 @@ next-env.d.ts
 # Vercel
 .vercel
 
-# Documentation artifacts (keep only README.md)
+# Documentation artifacts (keep README.md and docs)
 *.md
 !README.md
+!GIT_SETUP.md
+!docs/**/*.md
+!screenshots/**/*.md
 
 # Windows batch/PowerShell files
 *.bat
