--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hierarchical-clustering-visualization",
   "version": "1.0.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dharmikgalla/DHV-final.git"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
